# drone_ws

./: README.md  launch.sh
devel/: .catkin  .rosinstall  setup.sh
devel/include/ardrone_autonomy/: CamSelectRequest.h  CamSelectResponse.h  FlightAnimRequest.h  FlightAnimResponse.h  LedAnimRequest.h  LedAnimResponse.h  Navdata.h  RecordEnableRequest.h  RecordEnableResponse.h  matrix33.h  navdata_adc_data_frame.h  navdata_altitude.h  navdata_demo.h  navdata_euler_angles.h  navdata_games.h  navdata_gyros_offsets.h  navdata_hdvideo_stream.h  navdata_kalman_pressure.h  navdata_magneto.h  navdata_phys_measures.h  navdata_pressure_raw.h  navdata_pwm.h  navdata_raw_measures.h  navdata_rc_references.h  navdata_references.h  navdata_time.h  navdata_trackers_send.h  navdata_trims.h  navdata_video_stream.h  navdata_vision.h  navdata_vision_detect.h  navdata_vision_of.h  navdata_vision_perf.h  navdata_vision_raw.h  navdata_watchdog.h  navdata_wifi.h  navdata_wind_speed.h  navdata_zimmu_3000.h  vector21.h  vector31.h
devel/include/cvg_sim_msgs/: Altimeter.h  Altitude.h  AttitudeCommand.h  Compass.h  ControllerState.h  HeadingCommand.h  HeightCommand.h  MotorCommand.h  MotorPWM.h  MotorStatus.h  PositionXYCommand.h  RC.h  RawImu.h  RawMagnetic.h  RawRC.h  RuddersCommand.h  ServoCommand.h  Supply.h  ThrustCommand.h  VelocityXYCommand.h  VelocityZCommand.h  YawrateCommand.h
devel/include/tum_ardrone/: AutopilotParamsConfig.h  GUIParamsConfig.h  filter_state.h  (+11 more)
devel/tmp/: ardronelib-gitclone.cmake  ardronelib-gitupdate.cmake
src/tracker/: CMakeLists.txt  README.md  tracker.cpp
(+35 files in other folders)
